--- a/index_assignment_2_2.html
+++ b/index_assignment_2_2.html
@@ -12,10 +12,11 @@
 	<body>
 		<h1>Kelvin Bonafasia</h1>
 		<h2>Inholland Haarlem</h2>
-		<p>Hi my name is Kelvin Bonafasia i live in a city called Alkmaar. I have 3 brothers and 1 sister</p>
+		<p>Hi my name is Kelvin Bonafasia i live in a city called Alkmaar, but i'm born in Haarlem and raised in the Dominican Republic.
+		I have 3 brothers and 1 sister.</p>
 		<a href="https://www.linkedin.com/in/kelvin-bonafasia-a49645153/" target="_blank">Link naar linkedin</a>
 		<p>I visited a friend in a london and we went out for a eat and the &pound; is expensive!! 
-		the &euro; is less worth but the &dollar; is less worth than &euro;</p>
-		<img src="placeimg_300_300_tech.jpg" alt="Code">
+		The &euro; is less worth but the &dollar; is less worth than &euro;</p>
+		<img src="images/placeimg_300_300_tech.jpg" alt="Code">
 	</body>
 </html>
