--- a/index_assignment_2_2.html
+++ b/index_assignment_2_2.html
@@ -17,6 +17,6 @@
 		<a href="https://www.linkedin.com/in/kelvin-bonafasia-a49645153/" target="_blank">Link naar linkedin</a>
 		<p>I visited a friend in a london and we went out for a eat and the &pound; is expensive!! 
 		The &euro; is less worth but the &dollar; is less worth than &euro;</p>
-		<img src="images/placeimg_300_300_tech.jpg" alt="Code">
+		<img src="images/placeimg_300_300_tech.jpg" alt="Code" title="Code developing"/>
 	</body>
 </html>
